[project]
name = "zm05"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Sae88", email = "gam3mico@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
zm05 = "zm05:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
