[project]
name = "zm05"
version = "0.1.1"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Sae88", email = "gam3mico@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "pandas>=2.3.1",
    "requests>=2.32.4",
    "typer>=0.16.0",
]

[project.scripts]
zm05 = "zm05.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
